- Fixed bug #38212 (Segfault on invalid imagecreatefromgd2part() parameters).
  (Pierre)
- Fixed bug #38211 (variable name and cookie name match breaks script
  execution). (Dmitry)
- Fixed bug #38194 (ReflectionClass::isSubclassOf() returns TRUE for the class
  itself). (Ilia)
- Fixed bug #38132 (ReflectionClass::getStaticProperties() retains \0 in key
  names). (Ilia)
- Fixed bug #37564 (AES privacy encryption not possible due to net-snmp 5.2
  compatibility issue). (Jani, patch by scott dot moynes+php at gmail dot com)

24 Jul 2006, PHP 5.2.0RC1
- Updated bundled MySQL client library to version 5.0.22 in the Windows
  distribution. (Edin)
- Updated timezonedb to version 2006.7. (Derick)

- Changed priority of PHPRC environment variable on win32 to be higher then
  value from registry. (Dmitry)
- Changed __toString() to be called wherever applicable. (Marcus)
- Changed E_ALL error reporting mode to include E_RECOVERABLE_ERROR. (Marcus)
- Changed realpath cache to be disabled when "open_basedir" or "safe_mode"
  are enabled on per-request basis. (Ilia)

- Improved the Zend memory manager: (Dmitry)
  . Removed unnecessary "--disable-zend-memory-manager" configure option.
  . Added "--enable-malloc-mm" configure option which is enabled by default
    in debug builds to allow using internal and external memory debuggers.
  . Allow tweaking the memory manager with ZEND_MM_MEM_TYPE and ZEND_MM_SEG_SIZE 
    environment variables.
  . For more information: Zend/README.ZEND_MM
- Improved safe_mode check for the error_log() function. (Ilia)
- Improved the error reporting in SOAP extension on request failure. (Ilia)
- Improved crypt() on win32 to be about 10 times faster and to have friendlier
  license. (Frank, Dmitry)
- Improved performance of the implode() function on associated arrays. (Ilia)
- Improved performance of str_replace() when doing 1 char to 1 char or 1 char
  to many chars replacement. (Ilia)
- Improved apache2filter SAPI: