@@ -27,6 +27,8 @@ PHP                                                                        NEWS
   itself). (Ilia)
 - Fixed bug #38132 (ReflectionClass::getStaticProperties() retains \0 in key
   names). (Ilia)
+- Fixed bug #38047 ("file" and "line" sometimes not set in backtrace from
+  inside error handler). (Dmitry)
 - Fixed bug #37564 (AES privacy encryption not possible due to net-snmp 5.2
   compatibility issue). (Jani, patch by scott dot moynes+php at gmail dot com)
 
